z-index added to fix content scrolling over navbar

--- a/flashcard-frontend/style.css
+++ b/flashcard-frontend/style.css
@@ -10,6 +10,7 @@ body {
 .navbar ul {
     /*removes bullets*/
     list-style-type: none;
+    z-index: 1;
     margin: 0;
     padding: 0;
     overflow: hidden;
